kubernetes/apps/it-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
  namespace: it-tools
spec:
  parentRefs:
    - name: shared-gateway
      namespace: kube-system
  hostnames:
    - "tools.tyrongabriel.com"
  rules:
    - backendRefs:
        - name: it-tools
          port: 80
